phpqladmin (2.0.18d-1) unstable; urgency=low

  * 

 -- Turbo Fredriksson <turbo@debian.org>  Thu,  6 May 2004 06:55:13 +0200

phpqladmin (2.0.18c-1) unstable; urgency=low

  * Add uidNumber, gidNumber and homeDirectory to a mail account IF we've
    choosen to use 'posixAccount' when creating user(s).
  * Spelling errors conserning attributes and defines fixed.
  * Predefine (empty) variables to get rid of errors.
  * Correctly process the next page/form to display in user_add.php.
    This depend largely on if we have an MX error or not.
  * Don't set 'host' to 'default' (in tables/user_add-details.inc) if we're not
    running in advanced mode. The host value will be figured out automaticly
    (in user_add.php)...
  * Rewrite the part that adds {User,Group}ID slightly. We use the
    PQL_CONF_FORWARDINGACCOUNT_UIDNUMBER value if it's a mail account, and
    generate a new value using pql_get_next_ugidnumber() if not.
  * The 'userhost' value which is/was generated by user_add.php might be
    an array containing the DNS entry and/or the QLC object(s). The DNS value
    is by default used, othervise the first QLC object.
  * If a define isn't set, the pql_get_define() will return an empty array with
    all rootdn's. Catch this, and return NULL if the define is unset.
  * Don't show the 'undefined variable' warnings if not running a CVS version.
  * Don't add the 'deliveryMode: localdelivery' if we're running with newer QmailLDAP.
  * To make sure we don't get 'Wrong datatype' in tables/user_add-additional.inc
    when checking if the mailHost is a DNS entry, we only look in the QLC
    array if there IS such an array.
  * Suidperl should no longer be used as interpreter in suid perl scripts.
  * For the autoAdd{HostName,RCPTHosts,Locals} stuff to work, the function
    pql_control_update_domains() needs to know the root dn (to be able to find
    the configuration value for the database suffix).